# esp-iot-mqtt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nvs.csv  sdkconfig
.github/workflows/: codeql.yml
data/: index.html
debug/: coredump.230726-2002.dump
main/: CMakeLists.txt  README.md  benhoyt_hashtable.c  benhoyt_hashtable.h  dummy.c  dummy.h  esp-iot-mqtt.c  iot_config.c  iot_config.h  iot_defines.h  iot_enums.h  iot_globals.c  iot_globals.h  iot_gpio_interrupt.c  iot_gpio_interrupt.h  iot_httpd.c  iot_httpd.h  iot_interrupt.c  iot_interrupt.c.old  iot_interrupt.h  iot_interrupt.h.old  iot_mqtt.c  iot_mqtt.h  iot_nvs.c  iot_nvs.h  iot_structs.h  iot_utils.c  iot_utils.h  iot_value_defines.h  iot_wifi.c  iot_wifi.h  main.c
main/drivers/: iot_simple_switch.c  iot_simple_switch.h  iot_stepper_bipolar.c  iot_stepper_bipolar.h  iot_stepper_common.c
main/web/: index.html  iot_settings.html  page2.html  printf-iot_settings.html  system-settings.html
main/web/css/: esp-iot-mqtt.css  settings.css
main/web/js/: esp-iot-mqtt.js
partition_table/: partitionTable.csv
pytools/: reuirements.txt  spiffs-minify.py
storage/: debug copy.txt  debug.txt  index2.html
web/: iot_settings.html  system-settings.html  wifi.html
web/css/: settings.css
web/js/: esp-iot-mqtt.js
