idf_component_register(SRCS "iot_mqtt.c" "iot_utils.c" "iot_nvs.c" "esp-iot-mqtt.c"
                            "iot_config.c"
                            "iot_globals.c"
                            "iot_interrupt.c"
                            "iot_wifi.c"




                            "dummy.c"
                    INCLUDE_DIRS ".")